# kompox

./: .dockerignore  .gitignore  .goreleaser.yml  AGENTS.md  CNAME  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  versions.json
.devcontainer/: devcontainer.json  install-dev-tools.sh
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/instructions/: en.instructions.md  ja.instructions.md  md.instructions.md
.github/prompts/: commit-messages.prompt.md  new-adr.prompt.md  new-task.prompt.md
.github/workflows/: build.yml  kompox-box-container.yml  kompox-docs.yml  kompox-gofmt.yml  kompox-release.yml
_dev/tasks/: 2025-09-27-disk-snapshot-unify.ja.md  2025-09-28-disk-snapshot-cli-flags.ja.md  2025-09-30-cluster-dns.ja.md  2025-10-01-cluster-dns.ja.md  2025-10-07-aks-dns.ja.md  2025-10-10-configs-secrets.md  GUIDE.en.md  (+26 more)
cluster/: cluster.go  provider.go
config/: ops_read.go  ops_read_test.go  paths.go  types.go
design/: README.ja.md  README.md  index.json
docker/: Dockerfile  entrypoint.sh
docs/: DEVELOPMENT.md  Kompox-Arch-v1.ja.md  Kompox-CLI-v1.ja.md  Kompox-Convert-Draft.ja.md  Kompox-KubeClient-v1.ja.md  Kompox-KubeConverter-v1.ja.md  Kompox-ProviderDriver-AKS-v1.ja.md  Kompox-ProviderDriver-v1.ja.md  Kompox-Resources-v1.ja.md  Kompox-Spec-Draft.ja.md  Komprox-ProviderDriver-v1.ja.md  index.en.md  index.ja.md  index.md
domain/: repository.go
edge/: 404.html  index.html  sitemap.xml
infra/: main.bicep
provider/: driver.go  provider.go
v0.0/: 404.html  sitemap.xml
(+528 files in other folders)
