[project]
name = "kompox-docs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.9.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocs-glightbox",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mike>=2.1",
]
